[gd_scene load_steps=4 format=3 uid="uid://dwfnffwb4di22"]

[ext_resource type="Script" path="res://scripts/octo_skin_3d.gd" id="1_efvdl"]
[ext_resource type="PackedScene" uid="uid://dpj7t2h7e72ai" path="res://assets/mesh/octo1.glb" id="2_4g4su"]
[ext_resource type="Material" uid="uid://cxoxn66tfhpab" path="res://assets/materials/octo_skin_3d.tres" id="2_ck5d0"]

[node name="OctoSkin3D" type="Node3D"]
script = ExtResource("1_efvdl")

[node name="octo1" parent="." instance=ExtResource("2_4g4su")]

[node name="OctoMesh" parent="octo1" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
surface_material_override/0 = ExtResource("2_ck5d0")

[node name="BlinkTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ClosedEyeTimer" type="Timer" parent="."]
unique_name_in_owner = true

[editable path="octo1"]
